--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "client": "npm run start --prefix client",
     "dev": "concurrently \"npm run server\" \"npm run client\""
   },
+  "engines": {
+    "node": "12.18.3"
+  },
   "author": "Steph",
   "license": "ISC",
   "dependencies": {
